[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/BossEnemyBody.png" type="Texture" id=1]
[ext_resource path="res://Enemies/BossEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/BossEnemyHead.png" type="Texture" id=4]
[ext_resource path="res://Enemies/BossEnemyWing.png" type="Texture" id=5]
[ext_resource path="res://Enemies/BossEnemyLeg1.png" type="Texture" id=6]
[ext_resource path="res://Enemies/BossEnemyLeg3.png" type="Texture" id=7]
[ext_resource path="res://Enemies/BossEnemyLeg2.png" type="Texture" id=8]
[ext_resource path="res://Music and Sounds/BossSound.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[sub_resource type="Animation" id=2]
resource_name = "Base"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment/EndSegment/EndPoint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment/EndSegment/EndPoint:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment/EndSegment:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment/EndSegment:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/LeftUpperLegSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, -12 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/LeftUpperLegSprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 3 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite/RightLowerLegSprite:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite/RightLowerLegSprite:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, 3 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -25.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite/LeftLowerLegSprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite/LeftLowerLegSprite:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Sprite/RightUpperLegSprite:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -12 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Sprite/RightUpperLegSprite:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment/EndSegment:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 10 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment/EndSegment:rotation_degrees")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment:position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 3 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment:rotation_degrees")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2/EndSegment:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 10 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2/EndSegment:rotation_degrees")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2/EndSegment:position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.67824, 9.59017 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2/EndSegment:rotation_degrees")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2/EndSegment/EndPoint:position")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 5 ) ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2/EndSegment/EndPoint:rotation_degrees")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/28/type = "value"
tracks/28/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment/EndSegment/EndPoint:position")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 5 ) ]
}
tracks/29/type = "value"
tracks/29/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment/EndSegment/EndPoint:rotation_degrees")
tracks/29/interp = 1
tracks/29/loop_wrap = true
tracks/29/imported = false
tracks/29/enabled = true
tracks/29/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/30/type = "value"
tracks/30/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2/EndSegment/EndPoint:position")
tracks/30/interp = 1
tracks/30/loop_wrap = true
tracks/30/imported = false
tracks/30/enabled = true
tracks/30/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 5 ) ]
}
tracks/31/type = "value"
tracks/31/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2/EndSegment/EndPoint:rotation_degrees")
tracks/31/interp = 1
tracks/31/loop_wrap = true
tracks/31/imported = false
tracks/31/enabled = true
tracks/31/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/32/type = "value"
tracks/32/path = NodePath("Sprite/RightWingSprite:position")
tracks/32/interp = 1
tracks/32/loop_wrap = true
tracks/32/imported = false
tracks/32/enabled = true
tracks/32/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, -18 ) ]
}
tracks/33/type = "value"
tracks/33/path = NodePath("Sprite/RightWingSprite:rotation_degrees")
tracks/33/interp = 1
tracks/33/loop_wrap = true
tracks/33/imported = false
tracks/33/enabled = true
tracks/33/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/34/type = "value"
tracks/34/path = NodePath("Sprite:position")
tracks/34/interp = 1
tracks/34/loop_wrap = true
tracks/34/imported = false
tracks/34/enabled = true
tracks/34/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/35/type = "value"
tracks/35/path = NodePath("Sprite:rotation_degrees")
tracks/35/interp = 1
tracks/35/loop_wrap = true
tracks/35/imported = false
tracks/35/enabled = true
tracks/35/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/36/type = "value"
tracks/36/path = NodePath("Sprite/HeadSprite:position")
tracks/36/interp = 1
tracks/36/loop_wrap = true
tracks/36/imported = false
tracks/36/enabled = true
tracks/36/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ) ]
}
tracks/37/type = "value"
tracks/37/path = NodePath("Sprite/HeadSprite:rotation_degrees")
tracks/37/interp = 1
tracks/37/loop_wrap = true
tracks/37/imported = false
tracks/37/enabled = true
tracks/37/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/38/type = "value"
tracks/38/path = NodePath("Sprite/LeftWingSprite:position")
tracks/38/interp = 1
tracks/38/loop_wrap = true
tracks/38/imported = false
tracks/38/enabled = true
tracks/38/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, -18 ) ]
}
tracks/39/type = "value"
tracks/39/path = NodePath("Sprite/LeftWingSprite:rotation_degrees")
tracks/39/interp = 1
tracks/39/loop_wrap = true
tracks/39/imported = false
tracks/39/enabled = true
tracks/39/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fly"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/LeftWingSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, -75.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/RightWingSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 75.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HeadSprite:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7.5 ), Vector2( 0, -9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment/EndSegment:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -36.8908, -45.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/RightUpperLegSprite/MiddleSegment:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 29.1237, -1.61324 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/RightUpperLegSprite:rotation_degrees")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.23296, -6.35283 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment/EndSegment:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 27.1653, 45.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite/LeftUpperLegSprite/MiddleSegment:rotation_degrees")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -25.6164, 0.0524311 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite/LeftUpperLegSprite:rotation_degrees")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7.23296, 5.03087 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2/EndSegment:rotation_degrees")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 50.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite/LeftLowerLegSprite/MiddleSegment2:rotation_degrees")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -56.4796, -7.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprite/LeftLowerLegSprite:rotation_degrees")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9.45784, -7.67364 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2/EndSegment:rotation_degrees")
tracks/13/interp = 2
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -33.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite/RightLowerLegSprite/MiddleSegment2:rotation_degrees")
tracks/14/interp = 2
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 58.1181, -7.0 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite/RightLowerLegSprite:rotation_degrees")
tracks/15/interp = 2
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12.2782, 7.67364 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="RayShape2D" id=5]
length = 16.0

[node name="BossEnemy" instance=ExtResource( 3 )]
script = ExtResource( 2 )
MAX_SPEED = 30
ACCELERATION = 70

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="HeadSprite" type="Sprite" parent="Sprite" index="0"]
position = Vector2( 0, -7 )
texture = ExtResource( 4 )

[node name="LeftWingSprite" type="Sprite" parent="Sprite" index="1"]
show_behind_parent = true
position = Vector2( -10, -18 )
texture = ExtResource( 5 )
offset = Vector2( -21, -5 )

[node name="RightWingSprite" type="Sprite" parent="Sprite" index="2"]
show_behind_parent = true
position = Vector2( 10, -18 )
texture = ExtResource( 5 )
offset = Vector2( 21, -5 )
flip_h = true

[node name="LeftUpperLegSprite" type="Sprite" parent="Sprite" index="3"]
position = Vector2( -12, -12 )
texture = ExtResource( 6 )
offset = Vector2( -4, 1 )
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment" type="Sprite" parent="Sprite/LeftUpperLegSprite" index="0"]
position = Vector2( -12, 3 )
texture = ExtResource( 8 )
offset = Vector2( -2, 4 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/LeftUpperLegSprite/MiddleSegment" index="0"]
position = Vector2( -6, 10 )
rotation = 0.261799
texture = ExtResource( 7 )
offset = Vector2( 1, 2 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/LeftUpperLegSprite/MiddleSegment/EndSegment" index="0"]
position = Vector2( 3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightUpperLegSprite" type="Sprite" parent="Sprite" index="4"]
position = Vector2( 12, -12 )
texture = ExtResource( 6 )
offset = Vector2( 5, 1 )
flip_h = true
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment" type="Sprite" parent="Sprite/RightUpperLegSprite" index="0"]
position = Vector2( 12, 3 )
texture = ExtResource( 8 )
offset = Vector2( 3, 4 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/RightUpperLegSprite/MiddleSegment" index="0"]
position = Vector2( 6, 10 )
rotation = -0.261799
texture = ExtResource( 7 )
offset = Vector2( -1, 2 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/RightUpperLegSprite/MiddleSegment/EndSegment" index="0"]
position = Vector2( -3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="LeftLowerLegSprite" type="Sprite" parent="Sprite" index="5"]
position = Vector2( -9, 0 )
rotation = -0.261799
texture = ExtResource( 6 )
offset = Vector2( -4, 1 )
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment2" type="Sprite" parent="Sprite/LeftLowerLegSprite" index="0"]
position = Vector2( -12, 3 )
rotation = -0.436332
texture = ExtResource( 8 )
offset = Vector2( -2, 4 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/LeftLowerLegSprite/MiddleSegment2" index="0"]
position = Vector2( -6, 10 )
texture = ExtResource( 7 )
offset = Vector2( 1, 2 )
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/LeftLowerLegSprite/MiddleSegment2/EndSegment" index="0"]
position = Vector2( 3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightLowerLegSprite" type="Sprite" parent="Sprite" index="6"]
position = Vector2( 9, 0 )
rotation = 0.261799
texture = ExtResource( 6 )
offset = Vector2( 4, 1 )
flip_h = true
__meta__ = {
"_edit_ik_": true
}

[node name="MiddleSegment2" type="Sprite" parent="Sprite/RightLowerLegSprite" index="0"]
position = Vector2( 12, 3 )
rotation = 0.436332
texture = ExtResource( 8 )
offset = Vector2( 3, 4 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndSegment" type="Sprite" parent="Sprite/RightLowerLegSprite/MiddleSegment2" index="0"]
position = Vector2( 5.67824, 9.59017 )
texture = ExtResource( 7 )
offset = Vector2( -1, 2 )
flip_h = true
__meta__ = {
"_edit_bone_": true
}

[node name="EndPoint" type="Position2D" parent="Sprite/RightLowerLegSprite/MiddleSegment2/EndSegment" index="0"]
position = Vector2( -3, 5 )
__meta__ = {
"_edit_bone_": true
}

[node name="MovementCollisionShape" parent="." index="1"]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Fly"
anims/Base = SubResource( 2 )
anims/Fly = SubResource( 3 )

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 4 )

[node name="EnemyStats" parent="." index="4"]
max_health = 10

[node name="Collider" parent="Hitbox" index="0"]
shape = SubResource( 5 )

[node name="RightWallCheck" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="LeftWallCheck" type="RayCast2D" parent="." index="7"]
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 2

[node name="FireTimer" type="Timer" parent="." index="8"]
wait_time = 0.5
autostart = true

[node name="BossAudio" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource( 9 )
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
